Fixed .m-masthead__content overflow

--- a/app/src/scss/modules/m-masthead.scss
+++ b/app/src/scss/modules/m-masthead.scss
@@ -25,6 +25,7 @@
   &__content {
     position: relative;
     white-space: nowrap;
+    overflow: hidden;
   }
 
   &__blankbutton {
